add patches for neoforge fabric api